fix: ensure build detect setting for Model2Use.h

--- a/nti/Makefile
+++ b/nti/Makefile
@@ -203,26 +203,34 @@ COMMON_OBJS := $(foreach dir,$(COMMON_DIR), $(wildcard $(dir)/*.o))
 TISSUE_LIB = ../gsl/lib/liblensdomain.a
 #TISSUE_LIB = ../lib/libTissueSim.a
 TARGETS = $(TISSUE_LIB) neuroGen neuroDev touchDetect
+ccred:=$(shell echo -e "\033[0;31m")
+ccnormal:=$(shell echo -e "\033[0m")
+Model2Use:=$(shell pwd)/include/Model2Use.h
 
-Model2Use:=./include/Model2Use.h
+#a:=$(awk '/^[ ]*#define/{ print $$2 }' < $${Model2Use} )
 create_file: 
-	set -e
-	@if [ ! -f "${Model2Use}" ]; then \
-		touch include/Model2Use.h; \
-		echo "//Please consider to define the following option, with MODEL_TO_USE is required" > include/Model2Use.h; \
-		echo "//IMPORTANT: any change is expected to have full rebuild" >> ${Model2Use}; \
-		echo "//#define MODEL_TO_USE <value>" >> ${Model2Use}; \
-		echo "//#define MAX_COMPUTE_ORDER <value> (range: 0-7)" >> ${Model2Use}; \
-		echo "//#define USE_DOUBLES   [to enable double-precision]" >> ${Model2Use}; \
-    echo "//#define WAIT_FOR_REST" >> ${Model2Use}; \
-		echo "#ifdef WAIT_FOR_REST" >> ${Model2Use}; \
-		echo "#define NOGATING_TIME 20.0 //ms" >> ${Model2Use}; \
-		echo "#else " >> ${Model2Use}; \
-		echo "#define NOGATING_TIME 0.0 //ms" >> ${Model2Use}; \
-		echo "#endif" >> ${Model2Use}; \
-		echo -e "\033[92mPlease open and revise ${Model2Use} \033[0m"; \
- 	  exit 1;  \
-	fi; 
+ifeq (,$(wildcard $(Model2Use)))
+	@touch ${Model2Use}
+	@echo "//Please consider to define the following option, with MODEL_TO_USE is required" > ${Model2Use} 
+	@echo "//IMPORTANT: any change is expected to have full rebuild" >> ${Model2Use}
+	@echo "//--------------------" >> ${Model2Use}
+	@echo "//#define MODEL_TO_USE <value> //with <value> is a macro defined in NTSMacros.h" >> ${Model2Use}
+	@echo "//#define MAX_COMPUTE_ORDER <value> (range: 0-7)" >> ${Model2Use}
+	@echo "//#define USE_DOUBLES   [to enable double-precision]" >> ${Model2Use} 
+	@echo "//#define WAIT_FOR_REST" >> ${Model2Use}
+	@echo "#ifdef WAIT_FOR_REST" >> ${Model2Use} 
+	@echo "#define NOGATING_TIME 20.0 //ms" >> ${Model2Use} 
+	@echo "#else " >> ${Model2Use} 
+	@echo "#define NOGATING_TIME 0.0 //ms" >> ${Model2Use} 
+	@echo "#endif" >> ${Model2Use} 
+	#$(shell echo -e "$(ccred) Please open and revise ${Model2Use} \033[0m")
+	$(echo  "$(ccred) Please open and revise ${Model2Use} \033[0m")
+else
+	@if [[ x$(g++ -DMODEL_TO_USE ${Model2Use}) = x ]]; then \
+echo  "$(ccred) Please add MODEL_TO_USE value to file ${Model2Use} $(ccnormal)"; \
+fi
+endif
+	exit 1
 
 target: create_file $(TARGETS) 
 
