--- a/nti/Makefile
+++ b/nti/Makefile
@@ -207,6 +207,7 @@ ccred:=$(shell echo -e "\033[0;31m")
 ccnormal:=$(shell echo -e "\033[0m")
 Model2Use:=$(shell pwd)/include/Model2Use.h
 
+DETECTMODELCHOSEN:=$(shell g++ -DMODEL_TO_USE ${Model2Use} 2>&1 | grep "warning") 
 #a:=$(awk '/^[ ]*#define/{ print $$2 }' < $${Model2Use} )
 create_file: 
 ifeq (,$(wildcard $(Model2Use)))
@@ -226,11 +227,11 @@ ifeq (,$(wildcard $(Model2Use)))
 	#$(shell echo -e "$(ccred) Please open and revise ${Model2Use} \033[0m")
 	$(echo  "$(ccred) Please open and revise ${Model2Use} \033[0m")
 else
-	@if [[ x$(g++ -DMODEL_TO_USE ${Model2Use}) = x ]]; then \
+	@if [[ x"${DETECTMODELCHOSEN}"  = "x " ]]; then \
 echo  "$(ccred) Please add MODEL_TO_USE value to file ${Model2Use} $(ccnormal)"; \
+exit 1; \
 fi
 endif
-	exit 1
 
 target: create_file $(TARGETS) 
 
