fix: complete fixing detecting Model2Use configuration

--- a/nti/Makefile
+++ b/nti/Makefile
@@ -209,8 +209,8 @@ Model2Use:=$(shell pwd)/include/Model2Use.h
 
 FoundModel2Use:=$(shell g++ -DMODEL_TO_USE ${Model2Use} 2>&1 | head -1) 
 #a:=$(awk '/^[ ]*#define/{ print $$2 }' < $${Model2Use} )
-create_file: 
 ifeq (,$(wildcard $(Model2Use)))
+target:
 	@touch ${Model2Use}
 	@echo "//Please consider to define the following option, with MODEL_TO_USE is required" > ${Model2Use} 
 	@echo "//IMPORTANT: any change is expected to have full rebuild" >> ${Model2Use}
@@ -228,11 +228,18 @@ ifeq (,$(wildcard $(Model2Use)))
 	$(echo  "$(ccred) Please open and revise ${Model2Use} \033[0m")
 	echo ${FoundModel2Use}
 	@if [[ "x${FoundModel2Use}" = x ]]; then \
-echo  "$(ccred) Please add MODEL_TO_USE value to file ${Model2Use} $(ccnormal)"; \
+echo  "$(ccred) Please add MODEL_TO_USE value to file ${Model2Use} $(ccnormal)"; exit ; \
 fi
+else ifeq ("x${FoundModel2Use}","x ")
+target:
+	@if [[ "x${FoundModel2Use}" = "x " ]]; then \
+echo  "$(ccred) Please add MODEL_TO_USE value to file ${Model2Use} $(ccnormal)"; exit ; \
+fi
+
+else
+target: $(TARGETS) 
 endif
 
-target: create_file $(TARGETS) 
 
 depend: ; makedepend $(ND_SOURCES)
 
