put Zipper to nts build

--- a/.lvimrc
+++ b/.lvimrc
@@ -33,6 +33,8 @@ au BufNewFile,BufRead NTSMacros.h setlocal foldmethod=marker
 au BufNewFile,BufRead *.par setlocal foldmethod=marker
 au BufNewFile,BufRead *.mk setlocal foldmethod=marker
 au BufNewFile,BufRead make_nts setlocal foldmethod=marker
+au BufNewFile,BufRead make_both setlocal foldmethod=marker
+au BufNewFile,BufRead make_mgs setlocal foldmethod=marker
 au BufNewFile,BufRead build_gsl setlocal foldmethod=marker
 au BufNewFile,BufRead *.mk setlocal ft=mdl foldmethod=marker
 "noremap <leader>f <Esc>:syn region myFold start="/*{{{*/" end="/*}}}*/" transparent fold<CR>
