add Mahon model implementation fix build script for nts

--- a/nti/Makefile
+++ b/nti/Makefile
@@ -249,7 +249,7 @@ uninstall:
 
 install: all
 
-clean: ; -rm -f $(ND_SHARED_OBJECTS) $(NG_SHARED_OBJECTS) $(NG_OBJECTS) $(ND_OBJECTS) $(TD_OBJECTS) TissueContext.o  $(BIN_DIR)/neuroGen $(BIN_DIR)/neuroDev $(BIN_DIR)/touchDetect $(OBJ_DIR)/*
+clean: ; -rm -f $(ND_SHARED_OBJECTS) $(NG_SHARED_OBJECTS) $(NG_OBJECTS) $(ND_OBJECTS) $(TD_OBJECTS) TissueContext.o  $(BIN_DIR)/neuroGen $(BIN_DIR)/neuroDev $(BIN_DIR)/touchDetect $(OBJ_DIR)/*  $(HEADER_DIR)/Model2Use.h.gch
 realclean: clean
 	-rm -f $(TARGETS) 
 
