add script to generate shared-library add generate MDL parser release form remove dependency on MaxComputeOrder.h

--- a/mdl/Makefile
+++ b/mdl/Makefile
@@ -63,12 +63,23 @@ ifeq ($(OPERATING_SYSTEM), AIX)
    endif
 endif
 
-#For debugging
-ifeq ($(CC), g++)
-   CFLAGS += -ggdb -g
-endif
-ifeq ($(CC), xlC_r)
-   CFLAGS += -g
+# Check if release mode
+ifeq ($(RELEASE), -release)
+  #For debugging
+  ifeq ($(CC), g++)
+     CFLAGS += -O3
+  endif
+  ifeq ($(CC), xlC_r)
+     CFLAGS += -O3
+  endif
+else
+  #For debugging
+  ifeq ($(CC), g++)
+     CFLAGS += -ggdb -g
+  endif
+  ifeq ($(CC), xlC_r)
+     CFLAGS += -g
+  endif
 endif
 
 #Optimization
