revise build: 1. using a single build_script file the build use models/all.mdf as the input (by default, so that the minimal build is used) - good for model evelopment for certain predefined system (e.g. NTS, NTSNVU, IBEx) the dedicated input file is models/nts.mdf models/ntsnvu.mdf, models/ibex.mdf to select such predefined system, we pass to build_script as --as-Nts, --as-Nts-NVU or --as-IBEx (check help message)
2. only packages that required are actually use for a given build

3. better detection + explaination about missing package(s)

--- a/common/Makefile
+++ b/common/Makefile
@@ -4,7 +4,9 @@ INCDIR= ./include
 CC=g++
 CFLAGS=-I$(INCDIR) -Wall -Werror -lgmp -std=c++11 -Wno-deprecated-declarations # -pedantic
 CFLAGS+= -fPIC 
-OTHER_LIBS := -I$(SUITESPARSE)/include -L$(SUITESPARSE)/lib -lcxsparse
+ifeq ($(USE_SUITESPARSE), 1)
+   OTHER_LIBS := -I$(SUITESPARSE)/include -L$(SUITESPARSE)/lib -lcxsparse -DUSE_SUITESPARSE
+endif
 LDFLAGS+= -shared
 
 RELEASE?="" # Potentially set by make_XXX or the user from the command line
