--- a/.lvimrc
+++ b/.lvimrc
@@ -27,8 +27,8 @@ set path+=**
 :set tags=$NTSROOT/tags
 
 au BufNewFile,BufRead *.di setlocal ft=d
-au BufNewFile,BufRead *.gsl setlocal ft=gsl foldmethod=marker
-au BufNewFile,BufRead *.mdl setlocal ft=mdl foldmethod=marker
+au BufNewFile,BufRead *.gsl setlocal ft=gsl foldmethod=marker shiftwidth=2 tabstop=2
+au BufNewFile,BufRead *.mdl setlocal ft=mdl foldmethod=marker shiftwidth=2 tabstop=2
 au BufNewFile,BufRead NTSMacros.h setlocal foldmethod=marker
 au BufNewFile,BufRead *.par setlocal foldmethod=marker
 au BufNewFile,BufRead *.mk setlocal foldmethod=marker
