fix LifeNode loop-neighbors in GPU Option4b remove unreachable code fix bug in Array_GPU.h, ArrayIterator_GPU.h move CUDA_CALLABLE from NumberUtils.h to rndm.h [for easy compilation]

--- a/mdl/Makefile
+++ b/mdl/Makefile
@@ -23,7 +23,7 @@ OBJECTONLYFLAGS :=
 
 # Look for include files in each of the modules
 #  This will append CFLAGS with a string like '-Idir1/include -Idir2/include'
-CFLAGS := -Iinclude -Iparser 
+CFLAGS := -Iinclude 
 
 # Create a variable 'ADDCFLAGS' that you can use to add to the CFLAGS from the
 # command line option of gmake if necessary
@@ -99,6 +99,8 @@ include sources.mk
 # Parser targets
 mdl.tab.h:  parser/mdl.y
 	cd parser; bison -v -d -b mdl mdl.y; cd ..
+	cd parser; mv mdl.tab.h ../include; cd -
+	
 
 #parser/mdl.tab.c: parser/mdl.y
 #	cd parser; bison -v -d -b mdl mdl.y; cd ..
