--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,6 @@ install:
 - "[ $CXX = g++ ] && export CXX=g++-6 || true"
 - "[ $CXX = clang++ ] && export CXX=clang++-3.8 || true"
 
-script:
-  - source set_env
-  - ./build_script -p LINUX --as-MGS
-
 services:
   - docker
 
@@ -33,10 +29,14 @@ before_install:
   - echo "Testing Docker Hub credentials"
     #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
   - echo "Docker Hub credentials are working"
-  - docker build -t build-springxd-base .
+    #- docker build -t build-springxd-base .
 
 script:
-  - docker ps -a
+  - source set_env
+  - ./build_script -p LINUX --as-MGS
+
+    #script:
+    #  - docker ps -a
 
 after_success:
   - echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
