--- a/.travis.yml
+++ b/.travis.yml
@@ -11,19 +11,19 @@ language: cpp
 
 compiler:
   - gcc
-  - clang
+    #- clang
 
 addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.8
+      #- llvm-toolchain-precise-3.8
     packages:
     - g++-6
-    - clang-3.8
+      #- clang-3.8
 install:
 - "[ $CXX = g++ ] && export CXX=g++-6 || true"
-- "[ $CXX = clang++ ] && export CXX=clang++-3.8 || true"
+  #- "[ $CXX = clang++ ] && export CXX=clang++-3.8 || true"
 
 cache:
   directories:
