--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ before_install:
   - sudo apt install -y cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT}
   - sudo apt clean
   - CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
+  - sudo ln -s ${CUDA_HOME} /usr/local/cuda
   - LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
   - PATH=${CUDA_HOME}/bin:${PATH}
     #  - wget https://github.com/ninja-build/ninja/releases/download/v1.9.0/ninja-linux.zip
