--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ cache:
   directories:
   - mpich
   - ompi
+  - /usr/local/cuda-${CUDA_SHORT}
 
 before_install:
   - CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
@@ -74,8 +75,8 @@ before_install:
       sudo apt update -qq
       sudo apt install -y cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT}
       sudo apt clean
-      sudo ln -s ${CUDA_HOME} /usr/local/cuda
     fi
+  - sudo ln -s ${CUDA_HOME} /usr/local/cuda
   - LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
   - PATH=${CUDA_HOME}/bin:${PATH}
     #  - wget https://github.com/ninja-build/ninja/releases/download/v1.9.0/ninja-linux.zip
@@ -93,6 +94,16 @@ before_install:
   - C_INCLUDE_PATH=${MPI_HOME}/lib:${C_INCLUDE_PATH}
   - INCLUDE_PATH=${MPI_HOME}/lib:${INCLUDE_PATH}
   - CPLUS_INCLUDE_PATH=${MPI_HOME}/lib:${CPLUS_INCLUDE_PATH}
+  - FLEX_HOME=`pwd`/flex
+  - if [ ! -d ${FLEX_HOME} ]; then sh ./get_flex.sh; fi
+  - PATH=${FLEX_HOME}/bin:${PATH}
+  - LD_LIBRARY_PATH=${FLEX_HOME}/lib:${LD_LIBRARY_PATH}
+  - LD_RUN_PATH=${FLEX_HOME}/lib:${LD_RUN_PATH}
+  - LIBRARY_PATH=${FLEX_HOME}/lib:${LIBRARY_PATH}
+  - CPATH=${FLEX_HOME}/lib:${CPATH}
+  - C_INCLUDE_PATH=${FLEX_HOME}/lib:${C_INCLUDE_PATH}
+  - INCLUDE_PATH=${FLEX_HOME}/lib:${INCLUDE_PATH}
+  - CPLUS_INCLUDE_PATH=${FLEX_HOME}/lib:${CPLUS_INCLUDE_PATH}
   - echo "Testing Docker Hub credentials"
     #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
   - echo "Docker Hub credentials are working"
