--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
     - ppa:graphics-drivers/ppa
       #- llvm-toolchain-precise-3.8
     packages:
-    - g++-6
+    - g++-7
     - bison
     - ubuntu-drivers-common
       #- nvidia-415
@@ -61,6 +61,7 @@ cache:
   directories:
   - mpich
   - ompi
+  - flex
   - /usr/local/cuda-${CUDA_SHORT}
 
 before_install:
@@ -104,6 +105,7 @@ before_install:
   - C_INCLUDE_PATH=${FLEX_HOME}/lib:${C_INCLUDE_PATH}
   - INCLUDE_PATH=${FLEX_HOME}/lib:${INCLUDE_PATH}
   - CPLUS_INCLUDE_PATH=${FLEX_HOME}/lib:${CPLUS_INCLUDE_PATH}
+  - echo "PATH: " $PATH
   - echo "Testing Docker Hub credentials"
     #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
   - echo "Docker Hub credentials are working"
