--- a/.travis.yml
+++ b/.travis.yml
@@ -110,6 +110,7 @@ before_install:
   - export INCLUDE_PATH=${FLEX_HOME}/include:${INCLUDE_PATH}
   - export CPLUS_INCLUDE_PATH=${FLEX_HOME}/include:${CPLUS_INCLUDE_PATH}
   - export INCLUDE=${FLEX_HOME}/include:${INCLUDE}
+  - pip install --trusted-host pypi.python.org -r requirements.txt
   - echo "Testing Docker Hub credentials"
     #- docker login -e=$DOCKER_EMAIL -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
   - echo "Docker Hub credentials are working"
@@ -117,7 +118,7 @@ before_install:
 
 script:
   - source set_env
-  - ./build_script -p LINUX --as-MGS
+  - ./build_script -p LINUX --as-MGS > /dev/null
 
     #script:
     #  - docker ps -a
