--- a/.travis.yml
+++ b/.travis.yml
@@ -118,6 +118,7 @@ before_install:
 
 script:
   - source set_env
+  - source set_env
   - ./build_script -p LINUX --as-MGS > /dev/null
 
     #script:
