--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,8 @@ before_install:
 script:
   - source set_env
   - source set_env
-  - ./build_script -p LINUX --as-MGS > /dev/null
+  - ./build_script -p LINUX --as-MGS --clean --rebuild
+    #> /dev/null
   - ls gsl/
 
     #script:
