--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,10 @@ jobs:
       if: branch = for_nvu 
       name: "Installing dependencies..."
       #script: npm install
-      script: echo "MGS build TUAN"
+      script: 
+        - source set_env
+        - source set_env
+        - ./build_script -p LINUX --as-MGS --rebuild > /dev/null
     - stage: NGS 
       #if: branch = master
       if: branch = for_nvu 
@@ -160,7 +163,7 @@ before_install:
 script:
   - source set_env
   - source set_env
-  #- ./build_script -p LINUX --as-MGS --rebuild > /dev/null
+  - ./build_script -p LINUX --as-MGS --rebuild > /dev/null
     #script:
     #  - docker ps -a
 
