avoid too many warning fix script install SuiteSparse

--- a/.travis.yml
+++ b/.travis.yml
@@ -121,10 +121,12 @@ matrix:
 
 cache:
   directories:
-  - mpich
+  #- mpich
   - ompi
   - flex
-  - /usr/local/cuda-${CUDA_SHORT}
+  - bison
+  - suitesparse
+    #- /usr/local/cuda-${CUDA_SHORT}
 
 before_install:
   - CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
